# godror

./: .gitignore  BUILD  deps.bzl  drv.go
check/: BUILD.bazel
dsn/: BUILD.bazel
num/: BUILD.bazel
sid/: BUILD.bazel
